# python-project-template

./: README.md  pyproject.toml
anonymous/: main.py  module.py  test_module.py
