[build-system]
requires = ["pdm-backend", "pdm-build-locked"]
build-backend = "pdm.backend"

[project]
name = "anonymous"
description = "A python project start template"
authors = [{ name = "anonymous", email = "anonymous@anonymous.com" }]
dependencies = []
requires-python = ">=3.10"
keywords = [""]
readme = "README.md"
classifiers = [
  "Topic :: Utilities",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/shejialuo/python-project-template"

[project.scripts]
anonymous = "anonymous.main:main"

[tool.pdm.version]
source = "scm"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"
atomic = true
filter_files = true
